package com.bhavnathacker.jettasks.util

object TestTags {
    const val SHOW_COMPLETED_SWITCH = "SHOW_COMPLETED_SWITCH"
    const val TASK_NAME = "TASK_NAME"
    const val TASK_DEADLINE = "TASK_DEADLINE"
    const val TASK_PRIORITY = "TASK_PRIORITY"
    const val TASK_STATUS = "TASK_STATUS"
    const val TASK_MEMO = "TASK_MEMO"
    const val TASK_TAG = "TASK_TAG"
}